--- a/Week2Module1/Week2Module1.csproj
+++ b/Week2Module1/Week2Module1.csproj
@@ -69,6 +69,7 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
+    <Content Include="MyDrive.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="About.aspx.cs">
@@ -123,6 +124,13 @@
     </Compile>
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
+    </Compile>
+    <Compile Include="MyDrive.aspx.cs">
+      <DependentUpon>MyDrive.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MyDrive.aspx.designer.cs">
+      <DependentUpon>MyDrive.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
