--- a/Week2Module1/Web.config
+++ b/Week2Module1/Web.config
@@ -14,6 +14,7 @@
   </connectionStrings>
 
   <system.web>
+    <sessionState mode="InProc" cookieless="false" timeout="30"></sessionState>
     <compilation debug="true" targetFramework="4.0" />
 
     <authentication mode="Forms">
