final changes: 20 June 2017

--- a/Week2Module1/Web.config
+++ b/Week2Module1/Web.config
@@ -15,9 +15,9 @@
     <sessionState mode="InProc" cookieless="false" timeout="30"></sessionState>
     <compilation debug="true" targetFramework="4.0" />
 
-    <authentication mode="Forms">
+    <!--authentication mode="Forms">
       <forms loginUrl="~/Account/Login.aspx" timeout="2880" />
-    </authentication>
+    </authentication-->
 
     <membership>
       <providers>
