--- a/Week2Module1/Week2Module1.csproj
+++ b/Week2Module1/Week2Module1.csproj
@@ -60,6 +60,137 @@
     <Content Include="Account\Default.aspx" />
     <Content Include="Account\Register.aspx" />
     <Content Include="Error.aspx" />
+    <Content Include="Images\calendar.png" />
+    <Content Include="Images\captcha\000b2ec818acac1c0b5fa7662ec136cb27ea0283.png" />
+    <Content Include="Images\captcha\122b5f1222e0b36da5c8d5cb07269adcae0fd419.png" />
+    <Content Include="Images\captcha\20c291ee045c3bd03ce3bdd874b4ca795308d021.png" />
+    <Content Include="Images\captcha\2220db62866426d66a2b87448e4e34754dd29944.png" />
+    <Content Include="Images\captcha\240793170b5f58c894257bdacc8d9c20b3062ec8.png" />
+    <Content Include="Images\captcha\2e76a96e4459dbecc4e1379f222b412fc610f6da.png" />
+    <Content Include="Images\captcha\3c7d14ddb0bd985245e72998ff8a1deac94ad8dd.png" />
+    <Content Include="Images\captcha\41dd86b5c18b11e2652d0c3fecfea097d2d53af3.png" />
+    <Content Include="Images\captcha\4cdf5ed0db1af7495d0dd8752726479e4e8ad441.png" />
+    <Content Include="Images\captcha\4f9e278d7b1f39ec699468f3cf6ac63e9cbbe991.png" />
+    <Content Include="Images\captcha\52efc4ce34f0b7ae6f15f34aa1f0b6a37b4d7cef.png" />
+    <Content Include="Images\captcha\54f23d9737212dcecf6cbdadcd84b975d87ac313.png" />
+    <Content Include="Images\captcha\5592fbdedbce63f6547b62c4ad98bf1c5a4024b1.png" />
+    <Content Include="Images\captcha\596f03d72197eb293eed7c7409ae227ff534a360.png" />
+    <Content Include="Images\captcha\5cde04253d43ae74713e05713d81297524fd2f25.png" />
+    <Content Include="Images\captcha\5e424813be857e742b97a7bccbae809137b286a8.png" />
+    <Content Include="Images\captcha\600f58a32b481874e6701b7e546ce4fe538902de.png" />
+    <Content Include="Images\captcha\70350eac390f1182c2f73e200fc19cd98757bf39.png" />
+    <Content Include="Images\captcha\72c8857b36b5bc1dfd5126734aedc4a7921a49df.png" />
+    <Content Include="Images\captcha\72f5725c6f61acd7b7a67aec7be8c9bb3c21dd30.png" />
+    <Content Include="Images\captcha\7738766dd8c2f302aa112057d8f27ebabb5113bd.png" />
+    <Content Include="Images\captcha\7d19383e0657e556d1e2f8cfb5cc1121a3562705.png" />
+    <Content Include="Images\captcha\7f3bfcfda0af8c371f449bc2e125f8b26a80f738.png" />
+    <Content Include="Images\captcha\821e360a791116c919782ed09f3abc91904c7bde.png" />
+    <Content Include="Images\captcha\9c882324b64625bb6016a2e2b6be820f804795a9.png" />
+    <Content Include="Images\captcha\ad99d8df802826a35e40ed42293cc43758edfc28.png" />
+    <Content Include="Images\captcha\b3c12edcef8fca46201616e5df80173c90d22b15.png" />
+    <Content Include="Images\captcha\b609f2e76234ee2ffc1c4d5af1e8ee2d200854c9.png" />
+    <Content Include="Images\captcha\b6535302899e28500a30694823591902bcf89aba.png" />
+    <Content Include="Images\captcha\bacca86d04e7f9301e2e48b26ce69884798cb2e2.png" />
+    <Content Include="Images\captcha\c300163a657ed41bb1ae6cc770053e1a69b0b002.png" />
+    <Content Include="Images\captcha\cf5096b0de5f5b21652b7d4d2285634f7441adcd.png" />
+    <Content Include="Images\captcha\d483221bd42b9e56c8cacd53f02d16ccbc1e07eb.png" />
+    <Content Include="Images\captcha\d6f5e51e2680a2c030ee154710362273c06b7aa4.png" />
+    <Content Include="Images\captcha\e4849d911627cd429f22c92e126acd0481848364.png" />
+    <Content Include="Images\captcha\e4fbe76c34615aea189609b2a18d27254e946b85.png" />
+    <Content Include="Images\captcha\e86595231d81de3aa1e066899e48e1bf6a6b0383.png" />
+    <Content Include="Images\captcha\e96f3e9ab8e3418fe8d62aec00deb093af0b8adc.png" />
+    <Content Include="Images\captcha\ec28f3f28e77c2473a9f31802509e27c61f4a6e2.png" />
+    <Content Include="Images\captcha\f25897bfd582f220351814bbbfb9f9c104fdd999.png" />
+    <Content Include="Images\captcha\fd4ae023bd3e18c16d76294988ddb2f6c707fbbe.png" />
+    <Content Include="Images\dateOfBirth.png" />
+    <Content Include="Images\delete.png" />
+    <Content Include="Images\drive.png" />
+    <Content Include="Images\emailId.png" />
+    <Content Include="Images\file.png" />
+    <Content Include="Images\Files\aac.png" />
+    <Content Include="Images\Files\ai.png" />
+    <Content Include="Images\Files\aiff.png" />
+    <Content Include="Images\Files\asp.png" />
+    <Content Include="Images\Files\avi.png" />
+    <Content Include="Images\Files\bmp.png" />
+    <Content Include="Images\Files\c.png" />
+    <Content Include="Images\Files\cpp.png" />
+    <Content Include="Images\Files\css.png" />
+    <Content Include="Images\Files\dat.png" />
+    <Content Include="Images\Files\dmg.png" />
+    <Content Include="Images\Files\doc.png" />
+    <Content Include="Images\Files\docx.png" />
+    <Content Include="Images\Files\dot.png" />
+    <Content Include="Images\Files\dotx.png" />
+    <Content Include="Images\Files\dwg.png" />
+    <Content Include="Images\Files\dxf.png" />
+    <Content Include="Images\Files\eps.png" />
+    <Content Include="Images\Files\exe.png" />
+    <Content Include="Images\Files\flac.png" />
+    <Content Include="Images\Files\flv.png" />
+    <Content Include="Images\Files\gif.png" />
+    <Content Include="Images\Files\h.png" />
+    <Content Include="Images\Files\htm.png" />
+    <Content Include="Images\Files\html.png" />
+    <Content Include="Images\Files\ics.png" />
+    <Content Include="Images\Files\iso.png" />
+    <Content Include="Images\Files\java.png" />
+    <Content Include="Images\Files\jpg.png" />
+    <Content Include="Images\Files\js.png" />
+    <Content Include="Images\Files\key.png" />
+    <Content Include="Images\Files\m4v.png" />
+    <Content Include="Images\Files\mid.png" />
+    <Content Include="Images\Files\mov.png" />
+    <Content Include="Images\Files\mp3.png" />
+    <Content Include="Images\Files\mp4.png" />
+    <Content Include="Images\Files\mpg.png" />
+    <Content Include="Images\Files\odp.png" />
+    <Content Include="Images\Files\ods.png" />
+    <Content Include="Images\Files\odt.png" />
+    <Content Include="Images\Files\otp.png" />
+    <Content Include="Images\Files\ots.png" />
+    <Content Include="Images\Files\ott.png" />
+    <Content Include="Images\Files\pdf.png" />
+    <Content Include="Images\Files\php.png" />
+    <Content Include="Images\Files\png.png" />
+    <Content Include="Images\Files\pps.png" />
+    <Content Include="Images\Files\ppt.png" />
+    <Content Include="Images\Files\psd.png" />
+    <Content Include="Images\Files\py.png" />
+    <Content Include="Images\Files\qt.png" />
+    <Content Include="Images\Files\rar.png" />
+    <Content Include="Images\Files\rb.png" />
+    <Content Include="Images\Files\rtf.png" />
+    <Content Include="Images\Files\sql.png" />
+    <Content Include="Images\Files\tga.png" />
+    <Content Include="Images\Files\tgz.png" />
+    <Content Include="Images\Files\tiff.png" />
+    <Content Include="Images\Files\txt.png" />
+    <Content Include="Images\Files\wav.png" />
+    <Content Include="Images\Files\xls.png" />
+    <Content Include="Images\Files\xlsx.png" />
+    <Content Include="Images\Files\xml.png" />
+    <Content Include="Images\Files\yml.png" />
+    <Content Include="Images\Files\zip.png" />
+    <Content Include="Images\folder.png" />
+    <Content Include="Images\gender.png" />
+    <Content Include="Images\home.png" />
+    <Content Include="Images\info.png" />
+    <Content Include="Images\name.png" />
+    <Content Include="Images\navFile.png" />
+    <Content Include="Images\navfolder.png" />
+    <Content Include="Images\newFolder.png" />
+    <Content Include="Images\passFilled.png" />
+    <Content Include="Images\passNotFilled.png" />
+    <Content Include="Images\reload.png" />
+    <Content Include="Images\rename.png" />
+    <Content Include="Images\rmChecked.png" />
+    <Content Include="Images\rmUnchecked.png" />
+    <Content Include="Images\search.png" />
+    <Content Include="Images\select.png" />
+    <Content Include="Images\upload.png" />
+    <Content Include="Images\userFilled.png" />
+    <Content Include="Images\userNotFilled.png" />
     <Content Include="Styles\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
@@ -148,7 +279,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Account\Web.config" />
