--- a/Week2Module1/Week2Module1.csproj
+++ b/Week2Module1/Week2Module1.csproj
@@ -207,6 +207,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="MyDrive.aspx" />
+    <Content Include="WebForm1.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="About.aspx.cs">
@@ -276,9 +277,17 @@
     <Compile Include="MyDrive.aspx.designer.cs">
       <DependentUpon>MyDrive.aspx</DependentUpon>
     </Compile>
+    <Compile Include="WebForm1.aspx.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForm1.aspx.designer.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Drive\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Account\Web.config" />
